# Finite-State-Machine

./: CMakeLists.txt  README.md  helper.c  helper.h  in3_validator  run  run.c  tester.c  validator  validator.c
inputs/: in1_run  in1_validator  in2_validator  in3_tester  in3_validator  in4_tester  in4_validator
